--- a/SampleWebApp/WEB-INF/Home.html
+++ b/SampleWebApp/WEB-INF/Home.html
@@ -7,7 +7,8 @@
 
 <h1>This is a Heading</h1>
 <p>This is a paragraph.</p>
-<p>updated by Krishna</p>
+<p>updated by Krishna</p>.
+<p>updated by Krishna in branch</p>
 //merg test purpose
 //updated by Krishna
 </body>
